--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-pro-sidebar": "^0.4.4",
     "react-responsive-modal": "^5.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
