--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.9.3",
     "react-modal": "^3.11.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-pro-sidebar": "^0.4.4",
     "react-responsive-modal": "^5.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "react-scroll": "^1.8.1",
+    "react-typical": "^0.1.3",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
