--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "devextreme-react": "^20.1.7",
     "dompurify": "^2.1.1",
     "konva": "^7.1.3",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-easy-swipe": "0.0.21",
     "react-elastic-carousel": "^0.9.4",
     "react-konva": "^16.13.0-6",
     "react-modal": "^3.11.2",
